external-projects/sui-prover/crates/sui-prover/tests/snapshots/opaque/double-wrap-buggy.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with verification errors
error: code should not abort
  ┌─ tests/inputs/opaque/double-wrap-buggy.move:6:7
  │
6 │     x + y
  │       ^
  │
  =     at tests/inputs/opaque/double-wrap-buggy.move:14: double_wrap_buggy_spec
